# AITranscription

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_CODE_VOICE_INTEGRATION_PLAN.md  CLAUDE_SPEECH_IMPROVEMENT_REPORT.md  COLLAB_REDESIGN.md  COLLAB_TAB_AUDIT.html  HANDOFF.md  MCP_SETUP_GUIDE.md  MONETIZATION_ANALYSIS.md  PLAN.md  QUEUE_BUGS.md  SESSION_MANAGEMENT_FIX.md  VOICE_RESPONSE_PLAN.md  VOICE_RESPONSE_UX_PLAN.md  docker-compose.yml  launch-dev.bat  launch-dev.ps1  launch-dev.sh  launch-team.ps1  launch-team.sh  plan.md  render.yaml
.claude/: settings.json
.claude/hooks/: file-op-claim.cmd  file-op-claim.py  keep-alive-marker.cmd  keep-alive-stop.cmd  keep-alive-stop.py  turn-gate.cmd  turn-gate.py
.githooks/: README.md  pre-commit
.github/workflows/: build.yml  ui2-ci.yml  vaaklite-ci.yml
.vaak/: project.json.example  vision.md
.vaak/design-notes/: 2026-05-13-end-of-day-pending.md  2026-05-23-currency-ledger-phase1-plan.md  2026-05-23-currency-ledger-phase1-spec.md  2026-05-28-assembly-mode-launcher-rework.md  2026-05-28-continuous-review-phase-2-implementation-plan.md  2026-05-28-continuous-review-redesign-spec.md  2026-05-28-hot-reload-architecture-spec.md  2026-05-28-hot-reload-phase-2-currency-migration-plan.md  2026-05-28-hot-reload-phase-2-f3-state-residency-audit.md  2026-05-28-hot-reload-phase-3-migration-stub.md  2026-05-28-session-handoff-post-rebuild.md  2026-05-28-unified-launch-row-ui-spec.md  2026-05-28-watchdog-regression-fix-spec.md  2026-05-29-busy-aware-fresh-relaunch-spec.md  2026-06-06-options-or-blocked-gate-BACKLOG.md  2026-06-08-decision-gate-presence-collision-spec.md  2026-06-08-phantom-decision-cards-spec.md  2026-06-08-role-differentiation-buildplan.md  2026-06-09-ui2-phase0-ia-decision-table.md  2026-06-09-ui2-phase0-token-sheet-and-wireframe.md  aalb-spanish-proficiency-test-plan-2026-05-15.md  assembly-mode-v1.0-corrected-spec-2026-05-13.md  assembly-mode-v1.5.0-preset-enum-spec-2026-05-13.md  collabtab-extraction-outline-2026-05-13.md  collabtab-restructure-v1-spec-2026-05-18.md  collabtab-restructure-v2-spec-2026-05-19.md  collabtab-ux-audit-2026-05-13.md  design-tokens-spec-2026-05-13.md  developer-1-handoff-2026-05-16.md  handoff-2026-05-14-end-of-session.md  handoff-2026-05-15-end-of-session.md  moderation-panel-ui-craft-review-2026-05-13.md  moderation-panel-ux-spec-2026-05-13.md  (+9 more)
backend/: .env.example  audit_data.py  check_users.py  fix_db.py  fix_nulls.py  fix_transcript_827.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_learning_tables.py  001_add_user_stats_and_transcripts.py  002_add_typing_wpm.py  003_add_gamification.py  003_add_missing_user_columns.py  004_fix_enum_columns.py  005_add_media_library.py  0b161e9c498a_merge_heads.py  bd3eeb8595a4_add_session_id_to_transcripts.py  f673366e91e7_add_transcript_type.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  audience.py  auth.py  dictionary.py  gamification.py  learning.py  roles.py  routes.py  schemas.py  studio.py  studio_page.py  translate_page.py
backend/app/core/: config.py  database.py  password.py
backend/app/correctors/: __init__.py  router.py  rule_based.py
backend/app/models/: __init__.py  app_profile.py  correction_transformer.py  dictionary.py  gamification.py  learning.py  media_library.py  transcript.py  user.py
backend/app/services/: __init__.py  achievement_seeder.py  audience.py  audio_collector.py  auth.py  correction_retriever.py  elevenlabs_tts.py  events.py  explanation.py  gamification.py  local_vision.py  media_prep.py  polish.py  role_designer.py  screen_reader.py  studio_transcription.py  transcript_qa.py  transcription.py  tts.py
backend/app/training/: __init__.py  correction_trainer.py  utils.py  whisper_finetuner.py
backend/app/vaaklite/: __init__.py  app.py  transcription.py  translation.py
backend/app/vaaklite/static/: index.html
backend/app/vaaklite/static/assets/: index-BHRr3FoY.js  index-Bh6ZBYWy.js  index-BsKXgkzt.css  index-C54UPZkh.js  index-C6lZxJD-.js  index-DQA6wxok.css  index-Dm4lMAe9.css  index-EXMwkhA8.css  index-IPvkhTqB.js  index-n3-RGgR3.js
backend/scripts/: manual_db_fix.py  seed_achievements.py  seed_admin.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_audience_endpoints.py  test_auth_endpoints.py  test_auth_service.py  test_auth_stats.py  test_builtin_rules.py  test_dictionary.py  test_gamification.py  test_gamification_endpoints.py  test_hallucination_detector.py  test_health.py  test_learning.py  test_roles.py  test_screen_reader.py  test_security.py  test_streaming_voices.py  test_studio.py  test_transcription.py
claude-hooks/: SETUP.md  scribe-voice-notify.sh  setup-claude-integration.sh  vaak-voice-notify.sh
desktop/: .env.example  .stylelintrc.json  TROUBLESHOOTING.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
desktop/src-tauri/: COVERAGE_GAPS.md  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: seed-adversarial-tags.json
desktop/src-tauri/src/: audio.rs  build_info.rs  collab.rs  collab_v2.rs  database.rs  focus_tracker.rs  keyboard_hook.rs  launch-seat.ps1  launcher.rs  lib.rs  main.rs  permissions.rs  protocol.rs  queue.rs  uia_capture.rs
desktop/src-tauri/src/a11y/: capture_linux.rs  capture_macos.rs  capture_windows.rs  focus_linux.rs  focus_macos.rs  focus_windows.rs  mod.rs  types.rs
desktop/src-tauri/src/mcp_handlers/: assembly_line.rs  mod.rs
mcp-speak/: README.md  pyproject.toml
mcp-speak/mcp_speak/: __init__.py  server.py  tts.py
shared/: __init__.py  pyproject.toml
shared/models/: __init__.py  dictionary.py  transcript.py  user.py
shared/schemas/: __init__.py  collab.py  common.py  transcription.py
vaak-lite/: render.yaml
web-client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
(+331 files in other folders)
