[project]
name = "vaak-speak"
version = "0.1.0"
description = "MCP server that connects Claude Code to Vaak for voice announcements"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
vaak-speak = "mcp_speak.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_speak"]
