[package]
name = "vaak-desktop"
version = "0.1.0"
description = "AI-powered transcription desktop app"
authors = ["Vaak Team"]
edition = "2021"
default-run = "vaak-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
tiny_http = "0.12"

# Native audio recording
cpal = "0.15"
hound = "3.5"
parking_lot = "0.12"
base64 = "0.22"

# Queue persistence
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

# MCP server dependencies (for vaak-mcp binary)
ureq = "2.9"
hostname = "0.4"

# Screen capture for screen_read MCP tool
screenshots = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
] }
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "vaak-mcp"
path = "src/bin/vaak-mcp.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
